Fix logo spacing. Fixes #40

--- a/src/ui/shared/Header.css
+++ b/src/ui/shared/Header.css
@@ -20,9 +20,3 @@
   font-weight: normal;
   line-height: 24px;
 }
-
-
-
-.Header .logo img {
-  max-height: 3rem;
-}
